--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     }
     .snake{
         background-color: hsl(200, 100%, 50%);
-        border: .25vmin solid black
+        border: .50vmin solid black
     }
     .food{
-        background-color: hsl(50, 100, 50%);
-        border: .25vmin solid black
+        background-color: hsl(50, 100%, 50%);
+        border: .50vmin solid black
     }
     </style>
    
